@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST delayed_job-1.8.4.gem 17920 RMD160 b7e413985e6e1432bf213d7abe6de07146931af9 SHA1 efdc4c9d3766a993f483ca9e8a972701cfcc5629 SHA256 b2db17916633d6d34c59bb57f799909102472cae153a46f7ddb8c1e81385ec87
 DIST delayed_job-2.0.3.gem 26112 RMD160 9d7c7fee58c11486f78b27ad9566b9ba598c3ce1 SHA1 ceeefbb44b4e4a0c660eda338b338411d55fcb37 SHA256 e1b21ac1d3803fbb3f39b923a840b422d077be34be3e5472518b99f93e197a85
-EBUILD delayed_job-1.8.4.ebuild 738 RMD160 876956e469fbb3540d306dddc579516938e0f833 SHA1 78b84d687aeca97cd37a034d6b398fad768af50c SHA256 5a75b70327b9c52ede4ddd4ad1969c71ad418d9127d60fc861b4199e23a4977b
 EBUILD delayed_job-2.0.3.ebuild 841 RMD160 8382774fe724045c2ff5fdd17919144245a0bd22 SHA1 48d4ebe9e8bf12c2b936bd1ca9ec7d8b7d674ce8 SHA256 4b70a9f6f7ad755e730bc24e575d0c98d7b89fb679d65d0129e68f0be4221ae5
-MISC ChangeLog 416 RMD160 5078a3608dbbbddd9689144fdc2fb5aa6a81c416 SHA1 7b815e0f9d75f1408d0fe51d4d3123ecfd817cbb SHA256 1ab8389e4c8a658d13b75e83e6cdc2a4e987e1f2ae61b5051f67d1c2898b9a74
+MISC ChangeLog 516 RMD160 dba7a0ba4d20f65bb149fa372c231f5be6e3c5d1 SHA1 ac23f0b3999bfc734c44ff4df3305e8a13bda703 SHA256 e7ef362a94af3a49dcc066ca737ea8134c51865e12dd496ef7d7befae27a9fd7
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAkxTxlMACgkQZihJkut28Sv/0QD7BikmqpVpvmR4BwOiieRJrGxB
-/MGrhjoqoC4ye7kujjYA/iJ5q5Y+Wl+OkGSUIOY7vHKSdW65BgFzqycF+3G3wMR1
-=y0KE
+iF4EAREIAAYFAk4Nuv8ACgkQiIP6VqMIqNf8OgD/egYrQ/p4Mu10apEQCUGIw98t
+ILdse+uxmWjmgt7M8uQA/jpAC8K/ybXXZTSBBFMttC34SmMQeODw6c+96KLkQJ8d
+=vFC8
 -----END PGP SIGNATURE-----
