@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/delayed_job
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Jul 2011; Hans de Graaff <graaff@gentoo.org> -delayed_job-1.8.4.ebuild:
+  Remove old version.
 
 *delayed_job-2.0.3 (31 Jul 2010)
 
